# EMBEDDED_IOT-EXPORTA-O_MODELO_VALIDA-O_ESP32-CAM

./: ABRIR_GITHUB_DESKTOP.sh  CMakeLists.txt  EXECUTAR_PUSH.sh  GIT_INSTRUCTIONS.md  INSTRUCOES_GITHUB_DESKTOP.md  INSTRUCOES_UPLOAD_MANUAL.md  PUSH_FINAL.sh  QUICK_START.md  README.md  SOLUCAO_PUSH.md  SOLUCAO_SIMPLES.md  config.py  push_manual.sh  push_to_github.sh  setup.sh  test_validation.py  try_push.sh
2025-SPRINT_1/: README.md
2025-SPRINT_1/classificador_cartuchos/: NOTAS_PROJETO.md  coleta_duckduckgo.py  treinamento_modelo.py
firmware/: ANALISE_PROBLEMAS_PLATFORMIO.md  INSTRUCOES_ARDUINO.md  build.sh  build_output.txt  compile_debug.sh  data_upload.py  platformio.ini  platformio.ini.new  sdkconfig.defaults  sdkconfig.h
firmware/config/: sdkconfig.h
firmware/data/: index.html
firmware/include/: esp32s3_config_fix.h  gpio_types.h.bak3_old  sdkconfig.h.bak
firmware/src/: labels.h  labels.txt  main.cpp  main_cnn_real_implementation.cpp  main_cnn_real_working.cpp  main_real_advanced.cpp  main_real_analysis.cpp  main_real_final.cpp  main_simple.cpp  main_tflite_official.cpp  main_video_streaming.cpp  model.h
model/: convert_to_c_array.py  export_tflite.py  model.h  model_int8.tflite  prepare_representative_data.py
relatorio/: integracao_tflite_esp32cam.md  relatorio_sprint3.md
