cmake_minimum_required(VERSION 4.0)
project(SPRINT_3)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(2025-SPRINT_1)
include_directories(firmware)
include_directories(firmware/config)
include_directories(firmware/include)
include_directories(firmware/src)
include_directories(model)

add_executable(SPRINT_3
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_10.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_12.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_13.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_14.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_15.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_16.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_17.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_19.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_21.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_22.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_23.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_24.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_25.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_26.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_27.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_28.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_29.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_3.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_30.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_4.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_5.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_7.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_8.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/HP_Original/HP_origina_9.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__1.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__10.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__11.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__12.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__13.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__14.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__15.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__3.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__4.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__5.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__6.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__7.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__8.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Canon_ink__9.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Epson_ink__1.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Epson_ink__10.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Epson_ink__11.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Epson_ink__12.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Epson_ink__14.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Epson_ink__15.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Epson_ink__2.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Epson_ink__4.jpg
        2025-SPRINT_1/classificador_cartuchos/dataset/Outros/Epson_ink__9.jpg
        2025-SPRINT_1/classificador_cartuchos/coleta_duckduckgo.py
        2025-SPRINT_1/classificador_cartuchos/historico_treinamento.png
        2025-SPRINT_1/classificador_cartuchos/NOTAS_PROJETO.md
        2025-SPRINT_1/classificador_cartuchos/treinamento_modelo.py
        2025-SPRINT_1/README.md
        firmware/config/sdkconfig.h
        firmware/include/sdkconfig.h
        firmware/src/labels.h
        firmware/src/main.cpp
        firmware/src/main_simple.cpp
        firmware/src/model.h
        firmware/ANALISE_PROBLEMAS_PLATFORMIO.md
        firmware/build.sh
        firmware/INSTRUCOES_ARDUINO.md
        firmware/platformio.ini
        firmware/sdkconfig.h
        model/representative_data/hp_original/hp_sample_000.jpg
        model/representative_data/hp_original/hp_sample_001.jpg
        model/representative_data/hp_original/hp_sample_002.jpg
        model/representative_data/hp_original/hp_sample_003.jpg
        model/representative_data/hp_original/hp_sample_004.jpg
        model/representative_data/hp_original/hp_sample_005.jpg
        model/representative_data/hp_original/hp_sample_006.jpg
        model/representative_data/hp_original/hp_sample_007.jpg
        model/representative_data/hp_original/hp_sample_008.jpg
        model/representative_data/hp_original/hp_sample_009.jpg
        model/representative_data/hp_original/hp_sample_010.jpg
        model/representative_data/hp_original/hp_sample_011.jpg
        model/representative_data/hp_original/hp_sample_012.jpg
        model/representative_data/hp_original/hp_sample_013.jpg
        model/representative_data/hp_original/hp_sample_014.jpg
        model/representative_data/hp_original/hp_sample_015.jpg
        model/representative_data/hp_original/hp_sample_016.jpg
        model/representative_data/hp_original/hp_sample_017.jpg
        model/representative_data/hp_original/hp_sample_018.jpg
        model/representative_data/hp_original/hp_sample_019.jpg
        model/representative_data/hp_original/hp_sample_020.jpg
        model/representative_data/hp_original/hp_sample_021.jpg
        model/representative_data/hp_original/hp_sample_022.jpg
        model/representative_data/hp_original/hp_sample_023.jpg
        model/representative_data/hp_original/hp_sample_024.jpg
        model/representative_data/hp_original/hp_sample_025.jpg
        model/representative_data/hp_original/hp_sample_026.jpg
        model/representative_data/hp_original/hp_sample_027.jpg
        model/representative_data/hp_original/hp_sample_028.jpg
        model/representative_data/hp_original/hp_sample_029.jpg
        model/representative_data/nao_hp/nao_hp_sample_000.jpg
        model/representative_data/nao_hp/nao_hp_sample_001.jpg
        model/representative_data/nao_hp/nao_hp_sample_002.jpg
        model/representative_data/nao_hp/nao_hp_sample_003.jpg
        model/representative_data/nao_hp/nao_hp_sample_004.jpg
        model/representative_data/nao_hp/nao_hp_sample_005.jpg
        model/representative_data/nao_hp/nao_hp_sample_006.jpg
        model/representative_data/nao_hp/nao_hp_sample_007.jpg
        model/representative_data/nao_hp/nao_hp_sample_008.jpg
        model/representative_data/nao_hp/nao_hp_sample_009.jpg
        model/representative_data/nao_hp/nao_hp_sample_010.jpg
        model/representative_data/nao_hp/nao_hp_sample_011.jpg
        model/representative_data/nao_hp/nao_hp_sample_012.jpg
        model/representative_data/nao_hp/nao_hp_sample_013.jpg
        model/representative_data/nao_hp/nao_hp_sample_014.jpg
        model/representative_data/nao_hp/nao_hp_sample_015.jpg
        model/representative_data/nao_hp/nao_hp_sample_016.jpg
        model/representative_data/nao_hp/nao_hp_sample_017.jpg
        model/representative_data/nao_hp/nao_hp_sample_018.jpg
        model/representative_data/nao_hp/nao_hp_sample_019.jpg
        model/representative_data/nao_hp/nao_hp_sample_020.jpg
        model/representative_data/nao_hp/nao_hp_sample_021.jpg
        model/representative_data/nao_hp/nao_hp_sample_022.jpg
        model/representative_data/nao_hp/nao_hp_sample_023.jpg
        model/representative_data/nao_hp/nao_hp_sample_024.jpg
        model/representative_data/nao_hp/nao_hp_sample_025.jpg
        model/representative_data/nao_hp/nao_hp_sample_026.jpg
        model/representative_data/nao_hp/nao_hp_sample_027.jpg
        model/representative_data/nao_hp/nao_hp_sample_028.jpg
        model/representative_data/nao_hp/nao_hp_sample_029.jpg
        model/convert_to_c_array.py
        model/create_dummy_model.py
        model/labels.txt
        model/model.h
        firmware/include/gpio_types.h
        firmware/src/camera_test.cpp
        firmware/src/camera_test.cpp
        firmware/src/camera_test.cpp)
